fix cell align

--- a/src/components/ReportHeader/style.scss
+++ b/src/components/ReportHeader/style.scss
@@ -5,8 +5,8 @@
   align-items: center;
 
   input, label, button {
-    font-size: 10px;
-    line-height: 12px;
+    font-size: 16px;
+    line-height: 18px;
     font-weight: 400;
   }
 
